fully correct doc for all APIs (except login)
